--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,33 @@
-# node_modules
-node_modules/
-dist/
-dist-ssr/
-*.local
+# dependencies
+node_modules
+/.pnp
+.pnp.js
 
-# Logs
+# testing
+/coverage
+
+# production
+/dist
+/build
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-firebase-debug.log*
 
-# IDEs
-.vscode/
-.idea/
+# IDE
+.vscode
+.idea
 *.swp
 *.swo
+*~
 
 # OS
-.DS_Store
 Thumbs.db
-
-# Environment points
-.env
-.env.local
-
-# Firebase
-.firebase/
-.firebaserc
